--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <h1 id="welcome">Welcome</h1>
+    <h2 id="welcome">Welcome to Number Guessing game </h2>
 
     <div>
-        <h1>Guess a Number between 50 and 100</h1>
-        <input type="text" id="guessInput" placeholder="Enter your guess here"><br>
-
+        <h3>Guess a Number Between 50 and 100</h3>
+        <input type="number" id="guessInput" /><br> <br>
         <button id="guessBtn">Guess</button>
-        <div id="guessResult"></div>
+        <p id="guessResult"></p>
+        <button id="playAgainBtn" style="display: none;">Play Again</button>
     </div>
 
 
